fix(All Tables): LIV-3544 Fixed Angular Corner and CSS Overlapping Issue

--- a/src/modules/products/components/styles.less
+++ b/src/modules/products/components/styles.less
@@ -123,3 +123,22 @@
   display: inline !important;
   margin-top: 20px !important;
 }
+
+.product-table {
+  thead tr:first-child > th:first-child {
+    border-radius: 3px 0 0 0 !important;
+  }
+  thead tr:first-child > th:last-child {
+    border-radius: 0 3px 0 0 !important;
+  }
+  tr:last-child > td:first-child {
+    border-radius: 0 0 0 3px !important;
+  }
+  tr:last-child > td:last-child {
+    border-radius: 0 0 3px 0 !important;
+  }
+
+  tr {
+    font-size: 11px;
+  }
+}
